fixed border radius on button, letter spacing

--- a/travel_ask/src/chat/chat.module.css
+++ b/travel_ask/src/chat/chat.module.css
@@ -142,8 +142,11 @@
     height: 43px;
     box-sizing: border-box;
     border: 1px solid rgba(235, 233, 228, 1);
-    text-align: center;
-      
+    
+}
+
+.input::placeholder {
+    text-align: center; 
 }
 
 
