--- a/travel_ask/src/chats/chats.module.css
+++ b/travel_ask/src/chats/chats.module.css
@@ -17,7 +17,7 @@
     font-family: 'KievitPro';
     font-weight: 600;
     font-size: 29px;
-    letter-spacing: 1px;
+    letter-spacing: 0.97px;
     margin-bottom: 25px;
 }
 
