--- a/travel_ask/src/main/main.module.css
+++ b/travel_ask/src/main/main.module.css
@@ -33,7 +33,7 @@
     margin: 0;
     font-size: 29px;
     line-height: 34.8px;
-    letter-spacing: 1px;
+    letter-spacing: 0.97px;
     color: black;
     margin-bottom: 19px;
     /* font-family: 'KievitPro'; */
