--- a/travel_ask/src/reviews/reviews.module.css
+++ b/travel_ask/src/reviews/reviews.module.css
@@ -13,7 +13,7 @@
     margin: 0;
     font-size: 29px;
     line-height: 34.8px;
-    letter-spacing: 1px;
+    letter-spacing: 0.97px;
     text-align: left;
     margin-bottom: 21px;
 }
@@ -28,6 +28,7 @@
     font-size: 15px;
     cursor: pointer;
     transition: all 0.3s ease-out; 
+    border-radius: 2px;
 }
 
 .button_all:hover {
